update readme and notebook

--- a/extract-sum-example.ipynb
+++ b/extract-sum-example.ipynb
@@ -164,15 +164,15 @@
     }
    ],
    "source": [
-    "doc_idx = 0\n",
+    "doc_idx = 0  # set document id\n",
     "doc = paper_text[doc_idx]\n",
-    "X = utils.vectorize_text(doc)\n",
+    "X = utils.vectorize_text(doc)  # vectorize sentences\n",
     "print(X.shape)  # (num_sentence, num_vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
       "A is sparse\n",
       "('##########################', True)\n",
       "('Number of Iterations: 6', True)\n",
-      "('Duration: 0.00619196891785', True)\n",
+      "('Duration: 0.0242409706116', True)\n",
       "('Num exemplars: 5', True)\n",
       "('Fraction exemplars: 0', True)\n"
      ]
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,19 +209,21 @@
       "Title: Self-Organization of Associative Database and Its Applications\n",
       "\n",
       "=============== Extracted summary ===============\n",
-      "Cheap and easy, this is also a good way to handle papers and ideas you touch regularly or need to pin up and down for inspiration., Shelving is an artist's best friend and is a cheap and easy way to get more room in your studio or art space\n",
+      " 2:: F(h) guarantees that F(ht+1) :::;  Lemma 2 If K(ht) is the diagonal matrix Kab(ht) = <5ab(WTwht)a/h~ then G(h, ht)  = F(ht) + (h -  + ~(h -  ht)T\\l F(ht)  (13)  ht)T K(ht)(h - ht)  (14)  is an auxiliary function for F(h) =  ~ ~)Vi -  a  Proof: Since G(h, h) = F(h) is obvious, we need only show that G(h, ht) do this, we compare F(h) = F(ht)  + (h -  htf\\l F(ht)  + ~(h -  2:: F(h)\n",
       "\n",
       "\n",
-      "Instead of spending all of your mental energy looking for or storing things, you can just follow the labels, freeing your mind to think about art., Once a month, do a purge of your studio\n",
+      "Note that this rescaling results in a multiplicative factor with the positive component of the gradient in the denominator and the absolute value of the negative component in the numerator of the factor\n",
       "\n",
       "\n",
-      "Some ideas include:   Essential supplies area -- the things you use every day\n",
+      " 2 Non-negative matrix factorization We formally consider algorithms for solving the following problem: Non-negative matrix factorization (NMF) Given a non-negative matrix V, find non-negative matrix factors Wand H such that: V~WH  (1)  \f",
+      "NMF can be applied to the statistical analysis of multivariate data in the following manner\n",
       "\n",
       "\n",
-      "If it isn't essential or part of a project, either throw it out or file it away for later\n",
+      "As long as this number is sufficiently small, the update should reduce IIV - WHII?  \f",
+      "Now if we diagonally rescale the variables and set  Halt  \"Ialt  (7)  = (WTW H)alt '  then we obtain the update rule for H that is given in Theorem 1\n",
       "\n",
       "\n",
-      "  Don't be sentimental here\n",
+      "(11) by Eq\n",
       "\n",
       "\n",
       "=============== Referecne abstract ==============\n"
@@ -233,7 +235,7 @@
        "'Non-negative matrix factorization (NMF) has previously been shown to  be a useful decomposition for multivariate data. Two different multi-  plicative algorithms for NMF are analyzed. They differ only slightly in  the multiplicative factor used in the update rules. One algorithm can be  shown to minimize the conventional least squares error while the other  minimizes the generalized Kullback-Leibler divergence. The monotonic  convergence of both algorithms can be proven using an auxiliary func-  tion analogous to that used for proving convergence of the Expectation-  Maximization algorithm. The algorithms can also be interpreted as diag-  onally rescaled gradient descent, where the rescaling factor is optimally  chosen to ensure convergence. '"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +345,7 @@
        "4   As you start planning for a project or work, ...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +388,7 @@
       "A is sparse\n",
       "('##########################', True)\n",
       "('Number of Iterations: 6', True)\n",
-      "('Duration: 0.00364804267883', True)\n",
+      "('Duration: 0.00336003303528', True)\n",
       "('Num exemplars: 5', True)\n",
       "('Fraction exemplars: 0', True)\n"
      ]
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +435,7 @@
        "' Keep related supplies in the same area., Make an effort to clean a dedicated workspace after every session., Place loose supplies in large, clearly visible containers., Use clotheslines and clips to hang sketches, photos, and reference material., Use every inch of the room for storage, especially vertical space., Use chalkboard paint to make space for drafting ideas right on the walls., Purchase a label maker to make your organization strategy semi-permanent., Make a habit of throwing out old, excess, or useless stuff each month.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
