--- a/extract-sum-example.ipynb
+++ b/extract-sum-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,33 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Outlook Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citi\n",
+    "citi_text = utils.get_outlook_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc_idx = 0\n",
+    "doc = citi_text[doc_idx]"
    ]
   },
   {
@@ -182,7 +209,7 @@
       "A is sparse\n",
       "('##########################', True)\n",
       "('Number of Iterations: 6', True)\n",
-      "('Duration: 0.0242409706116', True)\n",
+      "('Duration: 0.0362069606781', True)\n",
       "('Num exemplars: 5', True)\n",
       "('Fraction exemplars: 0', True)\n"
      ]
@@ -209,21 +236,21 @@
       "Title: Self-Organization of Associative Database and Its Applications\n",
       "\n",
       "=============== Extracted summary ===============\n",
-      " 2:: F(h) guarantees that F(ht+1) :::;  Lemma 2 If K(ht) is the diagonal matrix Kab(ht) = <5ab(WTwht)a/h~ then G(h, ht)  = F(ht) + (h -  + ~(h -  ht)T\\l F(ht)  (13)  ht)T K(ht)(h - ht)  (14)  is an auxiliary function for F(h) =  ~ ~)Vi -  a  Proof: Since G(h, h) = F(h) is obvious, we need only show that G(h, ht) do this, we compare F(h) = F(ht)  + (h -  htf\\l F(ht)  + ~(h -  2:: F(h)\n",
+      " 2:: F(h) guarantees that F(ht+1) :::;  Lemma 2 If K(ht) is the diagonal matrix Kab(ht) = <5ab(WTwht)a/h~ then G(h, ht)  = F(ht) + (h -  + ~(h -  ht)T\\l F(ht)  (13)  ht)T K(ht)(h - ht)  (14)  is an auxiliary function for F(h) =  ~ ~)Vi -  a  Proof: Since G(h, h) = F(h) is obvious, we need only show that G(h, ht) do this, we compare F(h) = F(ht)  + (h -  htf\\l F(ht)  + ~(h -  2:: F(h).\n",
       "\n",
       "\n",
-      "Note that this rescaling results in a multiplicative factor with the positive component of the gradient in the denominator and the absolute value of the negative component in the numerator of the factor\n",
+      "Note that this rescaling results in a multiplicative factor with the positive component of the gradient in the denominator and the absolute value of the negative component in the numerator of the factor.\n",
       "\n",
       "\n",
       " 2 Non-negative matrix factorization We formally consider algorithms for solving the following problem: Non-negative matrix factorization (NMF) Given a non-negative matrix V, find non-negative matrix factors Wand H such that: V~WH  (1)  \f",
-      "NMF can be applied to the statistical analysis of multivariate data in the following manner\n",
+      "NMF can be applied to the statistical analysis of multivariate data in the following manner.\n",
       "\n",
       "\n",
       "As long as this number is sufficiently small, the update should reduce IIV - WHII?  \f",
-      "Now if we diagonally rescale the variables and set  Halt  \"Ialt  (7)  = (WTW H)alt '  then we obtain the update rule for H that is given in Theorem 1\n",
+      "Now if we diagonally rescale the variables and set  Halt  \"Ialt  (7)  = (WTW H)alt '  then we obtain the update rule for H that is given in Theorem 1.\n",
       "\n",
       "\n",
-      "(11) by Eq\n",
+      "(11) by Eq.\n",
       "\n",
       "\n",
       "=============== Referecne abstract ==============\n"
@@ -258,98 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>headline</th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\\nKeep related supplies in the same area.,\\nMa...</td>\n",
-       "      <td>How to Be an Organized Artist1</td>\n",
-       "      <td>If you're a photographer, keep all the necess...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\\nCreate a sketch in the NeoPopRealist manner ...</td>\n",
-       "      <td>How to Create a Neopoprealist Art Work</td>\n",
-       "      <td>See the image for how this drawing develops s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\\nGet a bachelor’s degree.,\\nEnroll in a studi...</td>\n",
-       "      <td>How to Be a Visual Effects Artist1</td>\n",
-       "      <td>It is possible to become a VFX artist without...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\\nStart with some experience or interest in ar...</td>\n",
-       "      <td>How to Become an Art Investor</td>\n",
-       "      <td>The best art investors do their research on t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\\nKeep your reference materials, sketches, art...</td>\n",
-       "      <td>How to Be an Organized Artist2</td>\n",
-       "      <td>As you start planning for a project or work, ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            headline  \\\n",
-       "0  \\nKeep related supplies in the same area.,\\nMa...   \n",
-       "1  \\nCreate a sketch in the NeoPopRealist manner ...   \n",
-       "2  \\nGet a bachelor’s degree.,\\nEnroll in a studi...   \n",
-       "3  \\nStart with some experience or interest in ar...   \n",
-       "4  \\nKeep your reference materials, sketches, art...   \n",
-       "\n",
-       "                                    title  \\\n",
-       "0          How to Be an Organized Artist1   \n",
-       "1  How to Create a Neopoprealist Art Work   \n",
-       "2      How to Be a Visual Effects Artist1   \n",
-       "3           How to Become an Art Investor   \n",
-       "4          How to Be an Organized Artist2   \n",
-       "\n",
-       "                                                text  \n",
-       "0   If you're a photographer, keep all the necess...  \n",
-       "1   See the image for how this drawing develops s...  \n",
-       "2   It is possible to become a VFX artist without...  \n",
-       "3   The best art investors do their research on t...  \n",
-       "4   As you start planning for a project or work, ...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wiki = pd.read_csv('data/wikihowAll.csv')\n",
     "wiki_headline, wiki_text = utils.get_wiki_data()\n",
@@ -396,7 +334,7 @@
    ],
    "source": [
     "k = 5  # number of selected exemplar\n",
-    "exemplar_indices, _ = summarizer.identify_exemplars(X, K=k)"
+    "exemplar_indices, _ = summarizer.identify_exemplars(X)"
    ]
   },
   {
