--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -158,12 +158,12 @@
       "In September 2018, the US successfully concluded a revised trade agreement with South Korea, and then with Canada and Mexico. Two different outcomes, one benign and one dangerous\n",
       "\n",
       "========== Extracted summary: random selection ==========\n",
-      "On the one hand, freer trade could calm tensions and extend the current period of global growth. These include his oft-repeated assertion that it is easy to win a trade war with another country when you have a $100bn deficit ''by just not trading'\n",
+      "Given these scenarios, our view is that investors should prepare portfolios for either outcome. While deals struck with key allies in north america and asia suggest a willingness to engage in ft, his other statements suggest a risk he leans more towards bt\n",
       "Random selection computation time: 0.000\n",
       "\n",
       "========== Extracted summary: Tfidf ==========\n",
       "Indeed, it seems to be the case that the us is aiming both to lower and raise trade barriers for specific counterparties - see the expected and unexpected events of 2018.two different outcomes, one benign and one dangerousa conventional economic analysis of the objectives of ft and bt finds sharply different economic implications. Will the us-driven renegotiations and other actions result in more open or more closed international trade?the us administration appears to have two conflicting objectives in the trade war that it has initiated\n",
-      "Tfidf computation time: 0.003\n",
+      "Tfidf computation time: 0.004\n",
       "\n",
       "====== Extracted summary: sentence embeddings ======\n",
       "Sentence embedding shape: (2, 25)\n",
@@ -173,28 +173,37 @@
       "=============== ROUGE Scores ===============\n",
       "\n",
       "random\n",
-      "Overlap 1-gram \t\t\tF1: 0.590\n",
-      "Overlap 1-gram \t\t\tPrecision: 0.513\n",
-      "Overlap 1-gram \t\t\tRecall: 0.696\n",
-      "Overlap bi-gram \t\tF1: 0.481\n",
-      "Overlap bi-gram \t\tPrecision: 0.446\n",
-      "Overlap bi-gram \t\tRecall: 0.523\n",
+      "Overlap 1-gram \t\t\tF1: 0.094\n",
+      "Overlap 1-gram \t\t\tPrecision: 0.075\n",
+      "Overlap 1-gram \t\t\tRecall: 0.125\n",
+      "Overlap bi-gram \t\tF1: 0.000\n",
+      "Overlap bi-gram \t\tPrecision: 0.000\n",
+      "Overlap bi-gram \t\tRecall: 0.000\n",
+      "Longest Common Subsequence \tF1: 0.056\n",
+      "Longest Common Subsequence \tPrecision: 0.050\n",
+      "Longest Common Subsequence \tRecall: 0.083\n",
       "\n",
       "tfidf\n",
-      "Overlap 1-gram \t\t\tF1: 0.336\n",
-      "Overlap 1-gram \t\t\tPrecision: 0.280\n",
-      "Overlap 1-gram \t\t\tRecall: 0.420\n",
-      "Overlap bi-gram \t\tF1: 0.603\n",
-      "Overlap bi-gram \t\tPrecision: 0.568\n",
-      "Overlap bi-gram \t\tRecall: 0.643\n",
+      "Overlap 1-gram \t\t\tF1: 0.163\n",
+      "Overlap 1-gram \t\t\tPrecision: 0.113\n",
+      "Overlap 1-gram \t\t\tRecall: 0.292\n",
+      "Overlap bi-gram \t\tF1: 0.089\n",
+      "Overlap bi-gram \t\tPrecision: 0.059\n",
+      "Overlap bi-gram \t\tRecall: 0.185\n",
+      "Longest Common Subsequence \tF1: 0.105\n",
+      "Longest Common Subsequence \tPrecision: 0.097\n",
+      "Longest Common Subsequence \tRecall: 0.250\n",
       "\n",
       "embed\n",
-      "Overlap 1-gram \t\t\tF1: 0.383\n",
-      "Overlap 1-gram \t\t\tPrecision: 0.313\n",
-      "Overlap 1-gram \t\t\tRecall: 0.492\n",
-      "Overlap bi-gram \t\tF1: 0.417\n",
-      "Overlap bi-gram \t\tPrecision: 0.392\n",
-      "Overlap bi-gram \t\tRecall: 0.444\n"
+      "Overlap 1-gram \t\t\tF1: 0.471\n",
+      "Overlap 1-gram \t\t\tPrecision: 0.444\n",
+      "Overlap 1-gram \t\t\tRecall: 0.500\n",
+      "Overlap bi-gram \t\tF1: 0.290\n",
+      "Overlap bi-gram \t\tPrecision: 0.257\n",
+      "Overlap bi-gram \t\tRecall: 0.333\n",
+      "Longest Common Subsequence \tF1: 0.467\n",
+      "Longest Common Subsequence \tPrecision: 0.444\n",
+      "Longest Common Subsequence \tRecall: 0.500\n"
      ]
     }
    ],
