--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -49,7 +49,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summarization"
+    "### Summarization\n",
+    "\n",
+    "- Methods includes: \n",
+    "    - SMRS\n",
+    "    - Franke-Wolfe TF-IDF\n",
+    "    - Franke-Wolfe Word Embedding.\n",
+    "- Matlab and python for matlab engine is required to run the SMRS method. Remove `'SMRS'` from the `methods` list below if matlab is not installed."
    ]
   },
   {
@@ -213,9 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### ROUGE Score Across Documents"
    ]
@@ -224,7 +228,6 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
